# dagster-study

./: .env.example  .gitignore  .gitleaks.toml  .gitlint  .hadolint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  README.md  compose.yml  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: release.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
dagster/dockerfile.d/: .dockerignore  Dockerfile
dagster/dockerfile.d/src/: .gitignore  README.md  dagster.yaml  pyproject.toml  workspace.yaml
dagster/dockerfile.d/src/.dg/: telemetry.yaml
dagster/dockerfile.d/src/dbt_pipelines/: dbt_project.yml  profiles.yml
dagster/dockerfile.d/src/dbt_pipelines/macros/: generate_schema_name.sql
dagster/dockerfile.d/src/dbt_pipelines/models/eicu/: source.yml
dagster/dockerfile.d/src/dbt_pipelines/models/mimic_iv/: source.yml
dagster/dockerfile.d/src/dbt_pipelines/models/mimic_iv/tables/: antibiotic.sql  bg.sql  chemistry.sql  complete_blood_count.sql  dobutamine.sql  dopamine.sql  enzyme.sql  epinephrine.sql  gcs.sql  icustay_hourly.sql  icustay_times.sql  norepinephrine.sql  oxygen_delivery.sql  schema.yml  sepsis3.sql  sofa.sql  suspicion_of_infection.sql  urine_output.sql  urine_output_rate.sql  ventilation.sql  ventilator_setting.sql  vitalsign.sql  weight_durations.sql
dagster/dockerfile.d/src/src/dagster_project/: definitions.py
dagster/dockerfile.d/src/src/dagster_project/common/: constants.py  dbt.py  helper.py  resources.py  trino.py  utils.py
dagster/dockerfile.d/src/src/dagster_project/defs/: automation.py  maintenance.py  resources.py
dagster/dockerfile.d/src/src/dagster_project/defs/dbt_ingest/: defs.yaml
dagster/dockerfile.d/src/src/dagster_project/defs/dlt_ingest/: currencylayer_api_pipeline.py  defs.yaml  loads.py
dagster/dockerfile.d/src/src/dagster_project/defs/eicu/: assets.py  constants.py  dbt_assets.py
dagster/dockerfile.d/src/src/dagster_project/defs/mimic_iv/: assets.py  constants.py  dbt_assets.py
dagster/dockerfile.d/src/src/dagster_project/eicu/: assets.py  dbt_assets.py  definitions.py
dagster/dockerfile.d/src/src/dagster_project/mimic_iv/: assets.py  constants.py  definitions.py
dagster/dockerfile.d/src/src/dagster_project/template/: assets.py  constants.py  helper.py  utils.py
discord-py/dockerfile.d/: Dockerfile
discord-py/dockerfile.d/src/: app.py  requirements.txt
docs/: README.md  architecture.md  dataset_schema.md  doc-sync.md  operations.md  philosophy.md  references.md  resource-sizing.md  security.md
docs/architectures/: README.md  docker.md  flink.md  k8s.md  overview.md  spark.md  trino.md
docs/conventions/: dagster.md  dbt.md  docker.md  general.md  k8s.md  python.md  timezone.md
initdb/: 01_create_databases.sql
prometheus/: prometheus.yml
scripts/: upload_raw_to_seaweedfs.py
trino/etc/: jvm.config
trino/etc/catalog/: iceberg.properties
