[project]
name = "dagster_project"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
  "beautifulsoup4==4.13.3",
  "requests==2.32.5",
  "xlsx2csv==0.8.4",
  "openpyxl==3.1.5",
  "s3fs==2026.1.0",
  "dagster==1.12.12",
  "dagster-webserver==1.12.12",
  "dagster-graphql==1.12.12",
  "dagster-postgres==0.28.12",
  "dagster-dbt==0.28.12",
  # DuckDB 대체: Trino 어댑터 (버전은 dbt-core 1.10 호환성 빌드 시 재확인 필요)
  "dbt-trino>=1.8,<2.0",
  "dagster-dg-cli==1.12.12",
]

[dependency-groups]
dev = [
  "dagster-webserver",
  "pytest",
  "ruff",
  "sqlfluff",
  "sqlfluff-templater-dbt",
  "gitlint",
  "yamllint",
  "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = ["dagster_project.components.*"]

# --- Python 린터/포매터: ruff ---
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# E,F,I,UP,B,D,ANN,FA,RUF + S(bandit) DTZ(datetimez) SIM C4 C90(mccabe)
# PIE COM(commas) EM(errmsg) PD(pandas-vet) NPY(numpy)
select = [
    "E", "F", "I", "UP", "B", "D", "ANN", "FA", "RUF",
    "S", "DTZ", "SIM", "C4", "C90", "PIE", "COM", "EM", "PD", "NPY",
]
# docstring 미요구(D100/D104), 동적 Any 허용(ANN401),
# 포매터와 충돌하는 COM812/COM819 제외, pandas df 네이밍(PD901) 제외
ignore = ["D100", "D104", "ANN401", "COM812", "COM819", "PD901"]
# flake8-type-checking(TC)은 Dagster 런타임 타입 introspection과 충돌해 계속 보류

# docstring 컨벤션: Google 스타일
[tool.ruff.lint.pydocstyle]
convention = "google"

# 순환 복잡도 상한 (C90 / mccabe)
[tool.ruff.lint.mccabe]
max-complexity = 10

# 테스트 코드는 어노테이션·docstring·assert(S101) 면제
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S101"]

[tool.ruff.format]
indent-style = "space"

# --- 타입 체커: mypy (ruff는 타입을 검사하지 않으므로 별도 도구) ---
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # dagster·dbt·pyiceberg 등 외부 스텁 부재 대응
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true    # 함수에 타입 강제 (ruff ANN과 짝)
no_implicit_optional = true
# 전체 강화가 필요하면 strict = true

# --- SQL 린터/포매터: sqlfluff (dbt-trino) ---
[tool.sqlfluff.core]
templater = "dbt"
dialect = "trino"
max_line_length = 88

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

# --- 커밋 메시지 린터: gitlint (Conventional Commits) ---
[tool.gitlint]
# 짧은 커밋엔 본문이 없을 수 있어 허용
ignore = "body-is-missing"
# Conventional Commits 제목 규칙 강제
contrib = ["contrib-title-conventional-commits"]

[tool.gitlint.rules.title-max-length]
line-length = 72

# 허용 type (Conventional Commits 표준 11종)
[tool.gitlint.rules.contrib-title-conventional-commits]
types = [
    "feat", "fix", "docs", "style", "refactor",
    "perf", "test", "build", "ci", "chore", "revert",
]
