[project]
name = "dagster_project"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
  "beautifulsoup4==4.13.3",
  "requests==2.32.5",
  "xlsx2csv==0.8.4",
  "openpyxl==3.1.5",
  "s3fs==2026.1.0",
  "dagster==1.12.12",
  "dagster-webserver==1.12.12",
  "dagster-graphql==1.12.12",
  "dagster-postgres==0.28.12",
  "dagster-dbt==0.28.12",
  # DuckDB 대체: Trino 어댑터 (버전은 dbt-core 1.10 호환성 빌드 시 재확인 필요)
  "dbt-trino>=1.8,<2.0",
  # Trino 파이썬 클라이언트 — Iceberg 유지보수 프로시저 실행(common/trino.py)에 직접 사용.
  # dbt-trino 전이 의존이나, 직접 import하므로 명시 선언(explicit dependencies).
  "trino>=0.330",
  "dagster-dg-cli==1.12.12",
  # S3(SeaweedFS)·Iceberg 리소스
  "dagster-aws==0.28.12",
  # dagster-iceberg(preview)가 pyiceberg[pyarrow]를 동반 설치 → pyarrow는 전이 의존으로 해결
  "dagster-iceberg==0.3.14",
]

[dependency-groups]
dev = [
  "dagster-webserver",
  "pytest",
  "ruff",
  "sqlfluff",
  "sqlfluff-templater-dbt",
  "gitlint",
  "yamllint",
  "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = ["dagster_project.components.*"]

# 린트·포맷·타입체크 도구(ruff·sqlfluff·mypy) 설정은 repo 루트 pyproject.toml로 이전했다.
# 이 파일은 패키징(`[project]`·`[build-system]`)과 Dagster `dg` 설정만 둔다.
